# iac_agent

./: .dockerignore  .gitignore  CNAME  CONTRIBUTING.md  HISTORY.md  README.md  aws_infrastructure_data.json  config_resources.json  earth.py  main.tf  planet.py  pyproject.toml  requirements.yml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: docker-build-test.yml  docker-release.yml  pages.yml  ubuntu-tests.yml  windows-tests.yml
awsSetup/: .env.template  accounts.json  automate_setup.py  database_schema.sql
awsSetup/setup_account_980921723213/: lambda_function.py  package_lambda.sh  setup_aws_config_database.py
benchmark/: Dockerfile  README.md  benchmark.py  docker.sh  docker_build.sh  over_time.py  plots.py  refactor_tools.py  rungrid.py  swe-bench-lite.txt  swe-bench.txt  swe_bench.py  test_benchmark.py
docker/: Dockerfile
forge/: __init__.py  analytics.py  args.py  args_formatter.py  commands.py  exceptions.py  gui.py  help.py  history.py  io.py  linter.py  llm.py  main.py  mdstream.py  models.py  repo.py  repomap.py  report.py  scrape.py  sendchat.py  urls.py  utils.py  versioncheck.py  voice.py
forge/coders/: architect_coder.py  base_coder.py  editblock_coder.py  help_coder.py  help_prompts.py  search_replace.py  single_wholefile_func_coder.py  wholefile_coder.py  wholefile_func_coder.py
forge/queries/: README.md
forge/resources/: __init__.py
forge/website/: HISTORY.md  _config.yml  index.md
forge_IAC_type_0/: explanation.txt  main.py
forge_IAC_type_1/: explanation.txt  main.py
info_retrieval/: agent.py  error_handler.py  forge_interface.py  llm_handler.py  main.py  models.py  subprocess_handler.py
pipeline/: .gitignore  application_agent.py  continuous_setup.py  execution_agent.py  finalization_agent.py  orchestrator.py  planning_agent.py  requirements.txt  test_validation.py  validation_agent.py
scripts/: blame.py  issues.py  jekyll_run.sh  update-blame.sh  update-docs.sh  versionbump.py  yank-old-versions.py
setupTools/: getData.py  setupDataListeners  validate.py
(+240 files in other folders)
